--- a/src/css/sub.css
+++ b/src/css/sub.css
@@ -205,6 +205,7 @@
     min-width: 230px;
     border: 1px solid #ccc;
     border-left: 0;
+    box-sizing: border-box;
 }
 
 .tab-title li:first-child {
@@ -226,6 +227,7 @@
     display: block;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
     cursor: pointer;
 }
 
@@ -1276,6 +1278,60 @@ table .center {
 
 /* tablet 1024 이하 */
 @media screen and (max-width: 1024px) {
+    .con-header {
+        position: relative;
+    }
+    .contents .con-header .tab-title {
+        display: block;
+        border: 1px solid #ccc;
+        padding-top: 0;
+    }
+    .btn-tab-select{
+        position: relative;
+        width: 100%;
+        height: 60px;
+        padding-left: 20px;
+        margin-top: 40px;
+        border: 0;
+        background: #27499a;
+        font-size: 18px;
+        text-align: left;
+        color: #fff;
+    }
+    .btn-tab-select::after{
+        display: block;
+        position: absolute;
+        top: 22px;
+        right: 20px;
+        width: 20px;
+        height: 20px;
+        background: url("../../assets/images/btn/btn-w-arrow.png") no-repeat center;
+        background-size: contain;
+        content: "";
+        transform: rotate(-90deg);
+    }
+    .btn-tab-select.active::after{
+        transform: rotate(-270deg);
+    }
+    
+    .tab-title{
+        position: absolute;
+        width: 100%;
+        background: #fff;
+        z-index: 10;
+    }
+    .tab-title li{
+        min-width: 100%;
+        border: 0;
+        border-top: 1px solid #ccc;
+        text-align: left;
+    }
+    .tab-title li:first-child{
+        border: 0;
+    }
+    .tab-title label{
+        padding-left: 20px;
+    }
 
     /* 주요고객사 */
     .customer .company-list li{
@@ -1349,5 +1405,25 @@ table .center {
 
     .customer .visual p {
         max-width: 100%;
+    }
+
+    .th-row-table th,
+    .th-row-table td{
+        padding: 6px 10px;
+    }
+    .th-col-table th,
+    .th-col-table td{
+        padding: 6px 10px;
+    }
+
+    /* 상품소개 */
+    .product table col:first-child{
+        width: 125px !important;
+    }
+    .product .th-row-table th:first-child {
+        width: 125px !important;
+    }
+    .product table br{
+        display: none;
     }
 }
