--- a/src/css/sub.css
+++ b/src/css/sub.css
@@ -1698,21 +1698,35 @@ table .center {
     .greetings br{
         display: none;
     }
-    .greetings .first-txt-box {
-        
+    .greetings .first-txt-box{
+        position: relative;
+        height: 297px;
+        margin-bottom: 23px;
+        background: url("../../assets/images/visual/sub-introduce-m-greeting.png") no-repeat center;
+        background-size: contain;
     }
-    .greetings .first-txt-box .img-box{
-        order: 1;
-        width: 100%;
+    .greetings .first-txt-box *{
+        opacity: 0;
+        position: absolute;
     }
 
-    .greetings .first-txt-box .txt-box{
-        width: 100%;
+    .greetings p{
+        font-size: 12px;
     }
 
-    .greetings .first-txt-box .bg-txt-box{
-        order: 2;
-        width: 100;
+    .greetings>p:nth-child(2){
+        margin-bottom: 20px;
+    }
+
+    .greetings .line-txt-box{
+        padding-left: 16px;
+    }
+    .greetings .line-txt-box strong{
+        font-size: 16px;
+    }
+
+    .greetings .line-txt-box{
+        margin-bottom: 25px;
     }
 
     .history h4{
