--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -177,6 +177,9 @@ textarea {
   text-indent: 15px;
   transition: all 0.5s;
   vertical-align: middle;
+  line-height: 41px;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
 }
 input::-webkit-input-placeholder {
   color: #b5b5b5;
