--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -78,6 +78,7 @@ button {
   letter-spacing: -.05em;
   line-height: 1.25;
   color: #000;
+  border-radius: 0;
 }
 button {
   border: 1px solid #ccc;
@@ -177,14 +178,15 @@ textarea {
   text-indent: 15px;
   transition: all 0.5s;
   vertical-align: middle;
-  line-height: 41px;
   -webkit-appearance: none;
   -webkit-border-radius: 0;
 }
-input::-webkit-input-placeholder {
+input::placeholder,
+input::-webkit-input-placeholder,
+input::-moz-placeholder {
   color: #b5b5b5;
   font-size: 12px;
-  line-height: 100%;
+  line-height: normal !important;
 }
 textarea {
   padding: 5px 0;
