--- a/src/css/main.css
+++ b/src/css/main.css
@@ -263,6 +263,32 @@
     position: absolute;
 }
 
+.achievement-pop{
+    overflow: hidden;
+    position: relative;
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 10px;
+}
+.achievement-pop img{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.achievement-pop .btn-close-pop{
+    overflow: hidden;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 20px;
+    height: 20px;
+    border: 0;
+    background: url("../../assets/images/btn/btn-w-close.png") no-repeat center;
+    background-size: contain;
+    line-height: 10;
+}
+
 /* contents */
 .contents {
     word-break: keep-all;
