--- a/src/css/main.css
+++ b/src/css/main.css
@@ -263,20 +263,25 @@
     position: absolute;
 }
 
-.achievement-pop{
+.achievements-list .js-cross-view span:last-child {
+    opacity: 0;
+}
+
+.achievement-pop {
     overflow: hidden;
     position: relative;
     max-width: 90%;
     max-height: 90%;
     border-radius: 10px;
 }
-.achievement-pop img{
+
+.achievement-pop img {
     display: block;
     width: 100%;
     height: 100%;
 }
 
-.achievement-pop .btn-close-pop{
+.achievement-pop .btn-close-pop {
     overflow: hidden;
     position: absolute;
     top: 20px;
@@ -900,7 +905,8 @@
 }
 
 .board .btn-move button {
-    background: url("../../assets/images/btn/btn-board-arrow.png") no-repeat;
+    background: url("../../assets/images/btn/btn-board-arrow.png") no-repeat center;
+    background-size: contain;
 }
 
 .board .btn-move button:first-child {
