--- a/src/css/sub.css
+++ b/src/css/sub.css
@@ -592,6 +592,7 @@ table .center {
     display: block;
     width: 200px;
     height: 55px;
+    margin-top: 50px;
     background: #3255a3;
     font-size: 16px;
     line-height: 55px;
